# bible-api-rust

./: Cargo.toml
src/: book.rs  chapter.rs  db.rs  main.rs  params.rs  search.rs  verse.rs
